# django-react-turbo

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  package.json  pnpm-lock.yaml  tasks.json  turbo.json
.github/workflows/: ci.yml
apps/api/: Dockerfile  conftest.py  openapi.yml  package.json  pyproject.toml  pytest.ini
apps/api/apps/tasks/: admin.py  constants.py  filters.py  models.py  pagination.py  serializers.py  urls.py  view_mixins.py  views.py
apps/api/apps/tasks/migrations/: 0001_initial.py  0002_add_task_indexes.py
apps/api/apps/tasks/services/: __init__.py  bulk.py  csv_parsing.py  export.py
apps/api/apps/tasks/tests/: test_filters.py  test_models.py  test_serializers.py  test_services.py  test_views.py
apps/api/apps/users/: apps.py  authentication.py  cookies.py  models.py  password_validators.py  serializers.py  views.py
apps/api/apps/users/management/commands/: seed_admin.py
apps/api/apps/users/migrations/: 0001_initial.py
apps/api/apps/users/tests/: test_authentication.py  test_models.py  test_serializers.py  test_views.py
apps/api/config/: exceptions.py  schema_hooks.py  settings.py  urls.py  validation.py
apps/api/scripts/: start-e2e.mjs  start_e2e_server.py
apps/api/tests/e2e/: test_auth_flow.py  test_bulk_operations.py  test_stats.py  test_tasks_flow.py
apps/web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
apps/web/src/: App.tsx  index.css  main.tsx
docker/: Dockerfile.api  Dockerfile.web  nginx.conf
scripts/: sync-api-contract.mjs
(+74 files in other folders)
